style.css
/* global */
@import url('https://fonts.googleapis.com/css?family=Roboto');

/* =============================================== */
/* MENU */
.grid-menu {
    display: grid;
    grid-template-columns: 1fr 2fr 1fr; /* Left and right cells take 1fr, middle takes 2fr */
    align-items: center;
}

.top-menu {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: #ffffff;
    z-index: 1000;
}


.top-menu-contacts {
    background-color: #616161;
}

.top-menu-contacts a {
    font-size: 1.6rem;
    color: #ffffff;

}

.top-menu-buttons a {
    font-size: 1.4rem;
}

.top-menu-buttons {
    background-color: #f79eb0;
}


.top-menu-contacts .phone {
    font-size: 1.5rem;
    white-space: nowrap;
}

.top-menu-contacts .text {
    font-size: 1.2rem;
}

.grid-menu-left-cell {
    background-color: #ffffff;
    align-items: right;
    text-align: right;
    padding-right: 10px;
    height: auto;
}

.grid-menu-right-cell {
    background-color: #ffffff;
    height: 100%;
    align-items: center;
    text-align: center;
    margin-left: 12px;
}

.grid-menu-right-cell language {
    align-items: center;
    text-align: center;
    display: flex;
    align-content: flex-start;
    flex-direction: row;
    flex-wrap: wrap;
    margin-top: 8px;
}



.grid-menu-right-cell language img {
    padding: 2px;
    /* height: 80%;
    max-width: 40px; */
    width: 50px; 
    height: 25px; 
}


.grid-menu-mid-cell a {
    padding-right: 8px;
    padding-left: 8px;
}

.grid-menu-mid-cell a:hover {
    color:  #fffb00;
    cursor: pointer;
    transition: 0.3s;
}


.top-menu ul {
    list-style-type: none;
    margin: 0;
    padding: 10px 0;

    text-align: center;
}

.top-menu ul li {
    display: inline;
}

.top-menu ul li a {
    color: rgb(255, 255, 255);
    text-decoration: none;
}

.logo {
    width: 90%;
    max-width: 100px;
    height: auto;
}

.logo-icon {
    width: 60%; 
    max-width: 60px;
    height: auto;
}

img {
    border-radius: 48px;
    max-width: 33%;
    height: auto;
    padding: 4px;
}

/* ================================================== */
/* BANNER WITH INPUT FORM */
.full-width-banner {
    width: 100%; /* Full width */
    height: 550px; 
    /* height: 100%;  */
    background-image: url('back.png'); /* Add your background image here */
    background-size: cover; /* Cover the whole block */
    background-position: center; /* Center the image */
    color: white; /* Make the text stand out */
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.full-width-banner .content {
    background-color: rgba(0, 0, 0, 0.5); /* Optional: Add a translucent background to the content */
    padding: 20px;
}

.full-width-banner .grid-container {
    display: grid;
    grid-template-columns: 1fr 1fr; /* Two equal columns */
    gap: 20px; /* Add space between the columns */
    width: 100%;
    height: auto;
    align-items: center;
    min-width: 300px; /* Minimum width of the container */
    max-width: 600px; /* Maximum width of the container */
    margin: 0 auto; /* Center the container */
}

@media(max-width:645px) {
    .full-width-banner {
        height: 820px; 
    }

    .full-width-banner .grid-container {
        grid-template-columns: 1fr;
    }
}


.full-width-banner .grid-container h2 {
    font-size: 2.2rem;
    padding-top: 20px;
}

.full-width-banner .grid-container p {
    font-size: 1.7rem;
}

.full-width-banner .grid-container input, button {
    width: 100%;
    max-width: 600px;
    padding: 10px;
    margin: 10px 0;
    font-size: 16px;
    box-sizing: border-box; /* Ensures padding is included in width */
}

.full-width-banner .grid-container input {
    width: 100%;
    padding: 10px;
    font-size: 18px; /* Increase font size for input fields */
    margin-bottom: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.full-width-banner .grid-container input[type="submit"] {
    font-size: 20px; /* Increase font size for submit button */
    background-color: #f79eb0;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

.full-width-banner .grid-container input[type="submit"]:hover {
    background-color: #45a049;
}

.left-column {
    border-radius: 8px;
}

.right-column {
    border-radius: 8px;
}

form {
    display: flex;
    flex-direction: column;
}

/* ================================================= */
/* CONTENT */
.grid-2 {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    text-align: center;
    align-content: center;
    padding: 0 15vh;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    background-color: #ffffff;
    color: #000611;

}

.white {
    color: #fff;
}

a {
    color: #f79eb0;
    text-decoration: none;
}

/* section 1 */
.section-details {
    text-align: center;
    align-items: center;
}

.splitter {
    width: 300%; 
    max-width: 400px;
    height: 15px;
    margin: auto auto;
}

.section-details p {
    font-size: 1.1rem;
    padding-bottom: 10px;
    /* margin: 0; */
    max-width: 350px;
    margin: 0 auto;
    text-align: center; 
}

.section-details h2 {
    font-size: 1.7rem;
    margin-bottom: 10px;
}

.section-details a {
    font-size: 1.5rem;
    padding: 10px;
}

.section-details a:hover {
    color: #fff;
    cursor: pointer;
    transition: 0.3s;
}

.white:hover {
    position: relative;
    padding-left: 10px;
}

@media(max-width:645px) {

    .section-details {
        padding: 0;
        /* padding-top: 5rem; */
    }

    .grid-2 {
        padding: 0 5vh;
    }

}

